/*
 * $Id: ChangeLog,v 1.270 2002/06/14 03:24:16 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-06-14 14:40 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/getlist.prg
    + Add __GetListLast() for support to the functions Update() and
      ReadUpdate()
    * source/rtl/getsys.prg
    ! Fixed compatibility functions Update() and ReadUpdate().
      Now use __GetListLast() instead of __GetListActive().
      __GetListActive() reference to the active oGetList, beginning and
       concluding with the ReadModal.
      __GetListLast() reference to the last oGetList form the beginning
       of the ReadModal until another ReadModal begins.
    ! Fix bug in Accelerator(), Clipper 5.3 compatibility function.
    * Some cleanup.
  * source/rtl/tget.prg
    + Add support for SET DELIMITERS
  * source/rtl/tgetlist.prg
    ! Change __GetListActive() for __GetListLast() for support to
      Update() and ReadUpdate()

2002-06-13 20:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapiitm.h
    + Added: PHB_ITEM hb_itemPutCRaw  ( PHB_ITEM pItem, char * szText, ULONG ulLen );

  * source/vm/fastitem.c
    + Added: extern PHB_ITEM hb_itemPutCRaw  ( PHB_ITEM pItem, char * szText, ULONG ulLen );
    * Reverted hb_itemPutCPtr() to override last char with a NULL Terminator.

  * source/vm/arrayshb.c
  * tests/tstcstru.prg
    * Replaced hb_itemPutCPtr() calls, with hb_itemPutCRaw()

2002-06-13 16:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrayshb.c
    ! Fixed minor bug in HB_ArrayToStructure

2002-06-13 15:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
  * include/hbapi.h
    + Added: hb_objSendMsg( PHB_ITEM pObj, char *cMsg, ULONG ulArg, ... );

    /*
       NOTE: I belive few individuals wrote variations of this function